--- a/CabBookingApplication/src/app/custsignup/custsignup.component.html
+++ b/CabBookingApplication/src/app/custsignup/custsignup.component.html
@@ -5,7 +5,7 @@
     <div class="form-inner">
         <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="registerCustomer()">
             <div class="field">
-                <input type="text" placeholder="Name" required name="name" #name="ngModel" [(ngModel)]="customer.name">
+                <input type="text" placeholder="Name" required name="name" #name="ngModel" [(ngModel)]="customer.username">
             </div>
             <div class="field">
                 <input type="email" placeholder="Email Address" required name="email" #email="ngModel" [(ngModel)]="customer.email">
