--- a/CabBookingApplication/src/app/adminprofdetails/adminprofdetails.component.html
+++ b/CabBookingApplication/src/app/adminprofdetails/adminprofdetails.component.html
@@ -7,7 +7,63 @@
     <span style="color: white; font-size: 22px;padding: 6px 8px 6px 16px; margin-left: 10px;">Id: {{admin.adminId}}</span><br>
     <span style="color: white; font-size: 25px;padding: 6px 8px 6px 16px; margin-left: 10px;">{{admin.username}}</span>
     <hr style="width: 60%; background-color: rgb(228, 225, 225);">
+    <a (click)= "deleteUsers()" style="color: white;">Delete Users</a>
+    <a (click)= "updateAdmin()">Update Admin Details</a>
+    <a (click)= "allTrips()">View All Trips</a>
+    <a (click)= "tripsDateWise()">Date-Wise Trips</a>
+    <a (click)= "tripsCabWise()">Cab-Wise Trips</a>
+    <a (click)= "tripsCustomerWise()">Customer-Wise Trips</a>
+    <a (click)= "tripsDateRange()">Trips Range of Days</a>
 </div>
 
-
+<div class="main">
+    <div class="wrapper" style="float: left; margin-left: 15%; margin-top: 15%;">
+        <div class="title-text">
+            <div class="title signup">Delete Admin</div>
+        </div>
+        <div class="form-inner">
+            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="deleteAdmin()">
+                <div class="field">
+                    <input type="text" placeholder="Admin ID" required name="name" #name="ngModel" [(ngModel)]="admin.adminId">
+                </div>
+                <div class="field btn">
+                    <div class="btn-layer"></div>
+                    <input type="submit" value="Delete Admin">
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="wrapper" style="float: left; margin-left: 5%; margin-top: 15%">
+        <div class="title-text">
+            <div class="title signup">Delete Customer</div>
+        </div>
+        <div class="form-inner">
+            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="deleteCustomer()">
+                <div class="field">
+                    <input type="text" placeholder="Customer ID" required name="name" #name="ngModel" [(ngModel)]="customer.customerId">
+                </div>
+                <div class="field btn">
+                    <div class="btn-layer"></div>
+                    <input type="submit" value="Delete Customer">
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="wrapper" style="float: left; margin-left: 5%; margin-top: 15%">
+        <div class="title-text">
+            <div class="title signup">Delete Driver</div>
+        </div>
+        <div class="form-inner">
+            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="deleteDriver()">
+                <div class="field">
+                    <input type="text" placeholder="Driver ID" required name="name" #name="ngModel" [(ngModel)]="driver.driverId">
+                </div>
+                <div class="field btn">
+                    <div class="btn-layer"></div>
+                    <input type="submit" value="Delete Driver">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 <router-outlet></router-outlet>
