--- a/CabBookingApplication/src/app/updateadmin/updateadmin.component.html
+++ b/CabBookingApplication/src/app/updateadmin/updateadmin.component.html
@@ -1,1 +1,44 @@
-<p>updateadmin works!</p>
+<ul>
+    <li style="float: left; font-size: 25px; color: white; margin-top: 5px; margin-left: 15px;">Cab Booking Application</li>
+    <li><a href="/">Log out</a></li>
+</ul>
+<div class="sidenav">
+    <img src="../../assets/lion.gif" alt="Avatar" height="100px;" width="100px;" style="margin-left: 70px;"><br><br>
+    <span style="color: white; font-size: 22px;padding: 6px 8px 6px 16px; margin-left: 10px;">Id: {{admin.adminId}}</span><br>
+    <span style="color: white; font-size: 25px;padding: 6px 8px 6px 16px; margin-left: 10px;">{{admin.username}}</span>
+    <hr style="width: 60%; background-color: rgb(228, 225, 225);">
+    <a (click)= "deleteUsers()">Delete Users</a>
+    <a (click)= "updateAdmin()" style="color: white;">Update Admin Details</a>
+    <a (click)= "allTrips()">View All Trips</a>
+    <a (click)= "tripsDateWise()">Date-Wise Trips</a>
+    <a (click)= "tripsCabWise()">Cab-Wise Trips</a>
+    <a (click)= "tripsCustomerWise()">Customer-Wise Trips</a>
+    <a (click)= "tripsDateRange()">Trips Range of Days</a>
+</div>
+
+<div class="wrapper">
+    <div class="title-text">
+        <div class="title signup">Update</div>
+    </div>
+    <div class="form-inner">
+        <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="updateAdmin()">
+            <div class="field">
+                <input type="text" placeholder="Name" required name="name" #name="ngModel" [(ngModel)]="admin.username">
+            </div>
+            <div class="field">
+                <input type="email" placeholder="Email Address" required name="email" #email="ngModel" [(ngModel)]="admin.email">
+            </div>
+            <div class="field">
+                <input type="text" placeholder="Mobile Number" required name="mobile" #number="ngModel" [(ngModel)]="admin.mobile">
+            </div>
+            <div class="field">
+                <input type="password" placeholder="Password" required name="password" #password="ngModel" [(ngModel)]="admin.password">
+            </div>
+            <div class="field btn">
+                <div class="btn-layer"></div>
+                <input type="submit" value="Update">
+            </div>
+        </form>
+    </div>
+</div>
+
