--- a/CabBookingApplication/src/app/admin/admin.component.html
+++ b/CabBookingApplication/src/app/admin/admin.component.html
@@ -28,7 +28,7 @@
                 <input type="password" class="form-control" name="password" placeholder="Password" required  [(ngModel)]="admin.password">
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block" (click) = "goDetails()">Log in</button>
+                <button type="submit" class="btn btn-primary btn-block">Log in</button>
             </div>      
         </form>
         <p class="text-center"><a href="admin/signup">Create an Account</a></p>
