--- a/CabBookingApplication/src/app/adminsignup/adminsignup.component.html
+++ b/CabBookingApplication/src/app/adminsignup/adminsignup.component.html
@@ -11,7 +11,7 @@
                 <input type="email" placeholder="Email Address" required name="email" #email="ngModel" [(ngModel)]="admin.email">
             </div>
             <div class="field">
-                <input type="text" placeholder="Mobile Number" required name="mobile" #number="ngModel" [(ngModel)]="admin.mobile">
+                <input type="text" placeholder="Mobile Number" required name="mobile" #number="ngModel" [(ngModel)]="admin.mobileNumber">
             </div>
             <div class="field">
                 <input type="password" placeholder="Password" required name="password" #password="ngModel" [(ngModel)]="admin.password">
