--- a/CabBookingApplication/src/app/custprofdetails/custprofdetails.component.html
+++ b/CabBookingApplication/src/app/custprofdetails/custprofdetails.component.html
@@ -7,7 +7,7 @@
     <span style="color: white; font-size: 22px;padding: 6px 8px 6px 16px; margin-left: 10px;">Id: {{customer.customerId}}</span><br>
     <span style="color: white; font-size: 25px;padding: 6px 8px 6px 16px; margin-left: 10px;">{{customer.username}}</span>
     <hr style="width: 60%; background-color: rgb(228, 225, 225);">
-    <a (click)="goBookCab" style="color: white">Book Cab</a>
+    <a (click)="goBookCab()" style="color: white">Book Cab</a>
     <a href="#clients">Ongoing Trips</a>
     <a (click)="goTrips()">Your Trips</a>
     <a (click)="goUpdate()">Update Profile</a>
