--- a/CabBookingApplication/src/app/custsignup/custsignup.component.html
+++ b/CabBookingApplication/src/app/custsignup/custsignup.component.html
@@ -11,7 +11,7 @@
                 <input type="email" placeholder="Email Address" required name="email" #email="ngModel" [(ngModel)]="customer.email">
             </div>
             <div class="field">
-                <input type="text" placeholder="Mobile Number" required name="mobile" #number="ngModel" [(ngModel)]="customer.mobile">
+                <input type="text" placeholder="Mobile Number" required name="mobile" #number="ngModel" [(ngModel)]="customer.mobileNumber">
             </div>
             <div class="field">
                 <input type="password" placeholder="Password" required name="password" #password="ngModel" [(ngModel)]="customer.password">
