--- a/CabBookingApplication/src/app/updateadmin/updateadmin.component.html
+++ b/CabBookingApplication/src/app/updateadmin/updateadmin.component.html
@@ -8,7 +8,7 @@
     <span style="color: white; font-size: 25px;padding: 6px 8px 6px 16px; margin-left: 10px;">{{admin.username}}</span>
     <hr style="width: 60%; background-color: rgb(228, 225, 225);">
     <a (click)= "deleteUsers()">Delete Users</a>
-    <a (click)= "updateAdmin()" style="color: white;">Update Admin Details</a>
+    <a (click)= "updateAdmin()" style="color: white;">Update Profile</a>
     <a (click)= "allTrips()">View All Trips</a>
     <a (click)= "tripsDateWise()">Date-Wise Trips</a>
     <a (click)= "tripsCabWise()">Cab-Wise Trips</a>
@@ -18,10 +18,13 @@
 
 <div class="wrapper">
     <div class="title-text">
-        <div class="title signup">Update</div>
+        <div class="title signup">Update Admin</div>
     </div>
     <div class="form-inner">
         <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="updateAdmin()">
+            <div class="field">
+                <input type="number" placeholder="Admin Id" required name="adminId" #adminId="ngModel" [(ngModel)]="admin.adminId" disabled>
+            </div>
             <div class="field">
                 <input type="text" placeholder="Name" required name="name" #name="ngModel" [(ngModel)]="admin.username">
             </div>
@@ -29,7 +32,7 @@
                 <input type="email" placeholder="Email Address" required name="email" #email="ngModel" [(ngModel)]="admin.email">
             </div>
             <div class="field">
-                <input type="text" placeholder="Mobile Number" required name="mobile" #number="ngModel" [(ngModel)]="admin.mobile">
+                <input type="text" placeholder="Mobile Number" required name="mobile" #number="ngModel" [(ngModel)]="admin.mobileNumber">
             </div>
             <div class="field">
                 <input type="password" placeholder="Password" required name="password" #password="ngModel" [(ngModel)]="admin.password">
