--- a/CabBookingApplication/src/app/updatecustomer/updatecustomer.component.html
+++ b/CabBookingApplication/src/app/updatecustomer/updatecustomer.component.html
@@ -1,1 +1,44 @@
-<p>updatecustomer works!</p>
+<ul>
+    <li style="float: left; font-size: 25px; color: white; margin-top: 5px; margin-left: 15px;">Cab Booking Application</li>
+    <li><a href="/">Log out</a></li>
+</ul>
+<div class="sidenav">
+    <img src="../../assets/lion.gif" alt="Avatar" height="100px;" width="100px;" style="margin-left: 70px;"><br><br>
+    <span style="color: white; font-size: 22px;padding: 6px 8px 6px 16px; margin-left: 10px;">Id: {{customer.customerId}}</span><br>
+    <span style="color: white; font-size: 25px;padding: 6px 8px 6px 16px; margin-left: 10px;">{{customer.username}}</span>
+    <hr style="width: 60%; background-color: rgb(228, 225, 225);">
+    <a (click)="goBookCab()">Book Cab</a>
+    <a href="#clients">Ongoing Trips</a>
+    <a (click)= "goTrips()">Your Trips</a>
+    <a (click)= "goUpdate()" style="color: white">Update Profile</a>
+</div>
+<div class="main">
+    <div class="wrapper" style="margin-top: 10%; margin-left: 37%;">
+        <div class="title-text">
+            <div class="title signup">Update Customer</div>
+        </div>
+        <div class="form-inner">
+            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="updateCustomer()">
+                <div class="field">
+                    <input type="number" placeholder="Customer Id" required name="custId" #custId="ngModel" [(ngModel)]="customer.customerId" disabled>
+                </div>
+                <div class="field">
+                    <input type="text" placeholder="Name" required name="name" #name="ngModel" [(ngModel)]="customer.username">
+                </div>
+                <div class="field">
+                    <input type="email" placeholder="Email Address" required name="email" #email="ngModel" [(ngModel)]="customer.email">
+                </div>
+                <div class="field">
+                    <input type="text" placeholder="Mobile Number" required name="mobileNumber" #mobileNumber="ngModel" [(ngModel)]="customer.mobileNumber">
+                </div>
+                <div class="field">
+                    <input type="password" placeholder="Password" required name="password" #password="ngModel" [(ngModel)]="customer.password">
+                </div>
+                <div class="field btn">
+                    <div class="btn-layer"></div>
+                    <input type="submit" value="Update">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
