--- a/CabBookingApplication/src/app/adminviewalltrips/adminviewalltrips.component.html
+++ b/CabBookingApplication/src/app/adminviewalltrips/adminviewalltrips.component.html
@@ -1,1 +1,31 @@
-<p>adminviewalltrips works!</p>
+
+<ul>
+    <li style="float: left; font-size: 25px; color: white; margin-top: 5px; margin-left: 15px;">Cab Booking Application</li>
+    <li><a href="/">Log out</a></li>
+</ul>
+<div class="sidenav">
+    <img src="../../assets/lion.gif" alt="Avatar" height="100px;" width="100px;" style="margin-left: 70px;"><br><br>
+    <span style="color: white; font-size: 22px;padding: 6px 8px 6px 16px; margin-left: 10px;">Id: {{admin.adminId}}</span><br>
+    <span style="color: white; font-size: 25px;padding: 6px 8px 6px 16px; margin-left: 10px;">{{admin.username}}</span>
+    <hr style="width: 60%; background-color: rgb(228, 225, 225);">
+    <a (click)= "deleteUsers()">Delete Users</a>
+    <a (click)= "updateAdmin()">Update Profile</a>
+    <a (click)= "allTrips()" style="color: white;">View All Trips</a>
+    <a (click)= "tripsDateWise()">Date-Wise Trips</a>
+    <a (click)= "tripsCabWise()">Cab-Wise Trips</a>
+    <a (click)= "tripsCustomerWise()">Customer-Wise Trips</a>
+    <a (click)= "tripsDateRange()">Trips Range of Days</a>
+</div>
+<div class="main">
+    <table id="customers">
+        <tr>
+          <th>Pick up spot</th>
+          <th>Drop spot</th>
+          <th>Driver Name</th>
+          <th>Cab No.</th>
+          <th>Date</th>
+          <th>Total Bill</th>
+          <th>Status</th>
+        </tr>
+    </table>
+</div>
