--- a/CabBookingApplication/src/app/custprofdetails/custprofdetails.component.html
+++ b/CabBookingApplication/src/app/custprofdetails/custprofdetails.component.html
@@ -14,19 +14,19 @@
 </div>
 <div class="main">
     <div class="signup-form" style="margin-left: 38%; margin-top: 40px;">
-		<form>
+		<form #signupForm="ngForm" (ngSubmit)="bookTrip()">
 			<h2>BOOK CAB</h2>
-			<div class="form-group">
-				<input type="text" class="form-control" name="customerId" placeholder="Pick Up Location" required="required" value={{customer.customerId}} disabled>
+			<div class="form-group" >
+				<input type="text" class="form-control" name="customerId" placeholder="Pick Up Location" required="required" value={{customer.customerId}} disabled #customerId="ngModel" [(ngModel)]="customer.customerId">
 			</div>
 			<div class="form-group">
-				<input type="text" class="form-control" name="pickup" placeholder="Pick Up Location" required="required">
+				<input type="text" class="form-control" name="pickup" placeholder="Pick Up Location" required="required" #pickup = "ngModel" [(ngModel)] = "trip.fromLocation">
 			</div>
 			<div class="form-group">
-				<input type="text" class="form-control" name="drop" placeholder="Drop Location" required="required">
+				<input type="text" class="form-control" name="drop" placeholder="Drop Location" required="required" #drop = "ngModel" [(ngModel)] = "trip.toLocation">
 			</div>
 			<div class="form-group">
-				<input type="text" class="form-control" id="start" name="trip-start" value={{showDate()}} disabled>
+				<input type="datetime" class="form-control" id="start" name="tripstart" value={{showDate()}} #tripstart = "ngModel" [(ngModel)] = "trip.fromDateTime">
 			</div> 
 			<div class="form-group">
 				<label for="cars">Choose Cab:</label>
