--- a/CabBookingApplication/src/app/custprofdetails/custprofdetails.component.html
+++ b/CabBookingApplication/src/app/custprofdetails/custprofdetails.component.html
@@ -8,9 +8,9 @@
     <span style="color: white; font-size: 25px;padding: 6px 8px 6px 16px; margin-left: 10px;">{{customer.username}}</span>
     <hr style="width: 60%; background-color: rgb(228, 225, 225);">
     <a (click)="goBookCab()" style="color: white">Book Cab</a>
-    <a href="#clients">Ongoing Trips</a>
-    <a (click)="goTrips()">Your Trips</a>
-    <a (click)="goUpdate()">Update Profile</a>
+    <a (click) = "onGoingTrip()">Ongoing Trips</a>
+    <a (click)= "goTrips()">Your Trips</a>
+    <a (click)= "goUpdate()">Update Profile</a>
 </div>
 <div class="main">
     <div class="signup-form" style="margin-left: 38%; margin-top: 40px;">
@@ -26,7 +26,7 @@
 				<input type="text" class="form-control" name="drop" placeholder="Drop Location" required="required" #drop = "ngModel" [(ngModel)] = "trip.toLocation">
 			</div>
 			<div class="form-group">
-				<input type="datetime" class="form-control" id="start" name="tripstart" value={{showDate()}} #tripstart = "ngModel" [(ngModel)] = "trip.fromDateTime">
+				<input type="datetime" class="form-control" id="start" name="tripstart" value={{trip.fromDateTime}} #tripstart = "ngModel" [(ngModel)] = "trip.fromDateTime">
 			</div> 
 			<div class="form-group">
 				<label for="cars">Choose Cab:</label>
@@ -39,7 +39,7 @@
 				</select>
 			</div>        
 			<div class="form-group">
-				<button type="submit" class="btn btn-success btn-lg btn-block" style=" background-color: #222;">Book Now</button>
+				<button type="submit" class="btn btn-success btn-lg btn-block" style=" background-color: #222;" (click) = "onGoingTrip()">Book Now</button>
 			</div>
 		</form>
 	</div>
