--- a/CabBookingApplication/src/app/updatecustomer/updatecustomer.component.html
+++ b/CabBookingApplication/src/app/updatecustomer/updatecustomer.component.html
@@ -8,7 +8,7 @@
     <span style="color: white; font-size: 25px;padding: 6px 8px 6px 16px; margin-left: 10px;">{{customer.username}}</span>
     <hr style="width: 60%; background-color: rgb(228, 225, 225);">
     <a (click)="goBookCab()">Book Cab</a>
-    <a href="#clients">Ongoing Trips</a>
+    <a (click) = "onGoingTrip()">Ongoing Trips</a>
     <a (click)= "goTrips()">Your Trips</a>
     <a (click)= "goUpdate()" style="color: white">Update Profile</a>
 </div>
