--- a/CabBookingApplication/src/app/adminprofdetails/adminprofdetails.component.html
+++ b/CabBookingApplication/src/app/adminprofdetails/adminprofdetails.component.html
@@ -9,36 +9,20 @@
     <hr style="width: 60%; background-color: rgb(228, 225, 225);">
     <a (click)= "deleteUsers()" style="color: white;">Delete Users</a>
     <a (click)= "updateAdmin()">Update Profile</a>
-    <a (click)= "allTrips()">View All Trips</a>
-    <a (click)= "tripsDateWise()">Date-Wise Trips</a>
-    <a (click)= "tripsCabWise()">Cab-Wise Trips</a>
+    <a (click)= "allTrips()">View Trips</a>
+    <a (click)= "getAllDrivers()">View Drivers</a>
+    <a (click)= "getAllCustomers()">View Customers</a>
     <a (click)= "tripsCustomerWise()">Customer-Wise Trips</a>
     <a (click)= "tripsDateRange()">Trips Range of Days</a>
 </div>
 
 <div class="main">
-    <div class="wrapper" style="float: left; margin-left: 17%; margin-top: 15%;">
-        <div class="title-text">
-            <div class="title signup">Admin</div>
-        </div>
-        <div class="form-inner">
-            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="deleteUsers()">
-                <div class="field">
-                    <input type="text" placeholder="Admin ID" required name="name" #name="ngModel" [(ngModel)]="admin.adminId">
-                </div>
-                <div class="field btn">
-                    <div class="btn-layer"></div>
-                    <input type="submit" value="Delete Admin">
-                </div>
-            </form>
-        </div>
-    </div>
-    <div class="wrapper" style="float: left; margin-left: 5%; margin-top: 15%">
+    <div class="wrapper" style="float: left; margin-left: 31%; margin-top: 15%">
         <div class="title-text">
             <div class="title signup">Customer</div>
         </div>
         <div class="form-inner">
-            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="deleteCustomer()">
+            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="deleteCustomer(customer.customerId)">
                 <div class="field">
                     <input type="text" placeholder="Customer ID" required name="name" #name="ngModel" [(ngModel)]="customer.customerId">
                 </div>
@@ -54,7 +38,7 @@
             <div class="title signup">Driver</div>
         </div>
         <div class="form-inner">
-            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="deleteDriver()">
+            <form action="#" class="signup" #signupForm="ngForm" (ngSubmit)="deleteDriver(driver.driverId)">
                 <div class="field">
                     <input type="text" placeholder="Driver ID" required name="name" #name="ngModel" [(ngModel)]="driver.driverId">
                 </div>
