--- a/CabBookingApplication/src/app/adminviewalltrips/adminviewalltrips.component.html
+++ b/CabBookingApplication/src/app/adminviewalltrips/adminviewalltrips.component.html
@@ -10,9 +10,9 @@
     <hr style="width: 60%; background-color: rgb(228, 225, 225);">
     <a (click)= "deleteUsers()">Delete Users</a>
     <a (click)= "updateAdmin()">Update Profile</a>
-    <a (click)= "allTrips()" style="color: white;">View All Trips</a>
-    <a (click)= "tripsDateWise()">Date-Wise Trips</a>
-    <a (click)= "tripsCabWise()">Cab-Wise Trips</a>
+    <a (click)= "allTrips()" style="color: white;">View Trips</a>
+    <a (click)= "getAllDrivers()">View Drivers</a>
+    <a (click)= "getAllCustomers()">View Customers</a>
     <a (click)= "tripsCustomerWise()">Customer-Wise Trips</a>
     <a (click)= "tripsDateRange()">Trips Range of Days</a>
 </div>
