--- a/CabBookingApplication/src/app/updateadmin/updateadmin.component.html
+++ b/CabBookingApplication/src/app/updateadmin/updateadmin.component.html
@@ -9,14 +9,14 @@
     <hr style="width: 60%; background-color: rgb(228, 225, 225);">
     <a (click)= "deleteUsers()">Delete Users</a>
     <a (click)= "updateAdmin()" style="color: white;">Update Profile</a>
-    <a (click)= "allTrips()">View All Trips</a>
-    <a (click)= "tripsDateWise()">Date-Wise Trips</a>
+    <a (click)= "allTrips()">View Trips</a>
+    <a (click)= "getAllDrivers()">View Drivers</a>
     <a (click)= "tripsCabWise()">Cab-Wise Trips</a>
     <a (click)= "tripsCustomerWise()">Customer-Wise Trips</a>
     <a (click)= "tripsDateRange()">Trips Range of Days</a>
 </div>
 
-<div class="wrapper">
+<div class="wrapper" style="margin-top: 8%; margin-left: 42%;">
     <div class="title-text">
         <div class="title signup">Update Admin</div>
     </div>
