--- a/CabBookingApplication/src/app/home/index.html
+++ b/CabBookingApplication/src/app/home/index.html
@@ -349,9 +349,9 @@
 											    </g>
 											</svg>
 		                                </div>
-		                                <h4 class="feature-title m-0">Time</h4>
+		                                <h4 class="feature-title m-0">Time Matters</h4>
 									</div>
-	                                <p class="text-sm mb-0">Always Get Cabs On Time.</p>
+	                                <p class="text-sm mb-0">Always Get Cabs On Time</p>
 	                            </div>
 	                        </div>
 							<div class="feature">
@@ -368,7 +368,7 @@
 		                                </div>
 		                                <h4 class="feature-title m-0">User Friendly</h4>
 									</div>
-	                                <p class="text-sm mb-0">A friendly UI for both the Customer and The Driver.</p>
+	                                <p class="text-sm mb-0">A friendly UI For Both The Customer and The Driver</p>
 	                            </div>
 	                        </div>
 							<div class="feature">
@@ -387,7 +387,7 @@
 		                                </div>
 		                                <h4 class="feature-title m-0">Easy Access</h4>
 									</div>
-	                                <p class="text-sm mb-0">Get Signed Up Today for Only $0.</p>
+	                                <p class="text-sm mb-0">Get Signed Up Today For Only $0</p>
 	                            </div>
 	                        </div>
 						</div>
