--- a/CabBookingApplication/src/app/custprofdetails/custprofdetails.component.html
+++ b/CabBookingApplication/src/app/custprofdetails/custprofdetails.component.html
@@ -14,10 +14,10 @@
 </div>
 <div class="main">
     <div class="signup-form" style="margin-left: 38%; margin-top: 40px;">
-		<form #signupForm="ngForm" (ngSubmit)="bookTrip()">
+		<form #signupForm="ngForm" (ngSubmit)="bookTrip(customer)">
 			<h2>BOOK CAB</h2>
 			<div class="form-group" >
-				<input type="text" class="form-control" name="customerId" placeholder="Pick Up Location" required="required" value={{customer.customerId}} disabled #customerId="ngModel" [(ngModel)]= "customer.customerId">
+				<input type="text" class="form-control" name="customerId" placeholder="Pick Up Location" required="required" disabled #customerId="ngModel" [(ngModel)]= "customer.customerId">
 			</div>
 			<div class="form-group">
 				<input type="text" class="form-control" name="pickup" placeholder="Pick Up Location" required="required" #pickup = "ngModel" [(ngModel)] = "trip.fromLocation">
